Fixed layout bug in singleproject page w wave

--- a/src/cssmodules/singleproject.module.scss
+++ b/src/cssmodules/singleproject.module.scss
@@ -17,7 +17,7 @@
         margin: auto;
         // display: flex;
         justify-content: center;
-       height: 80vh;
+       min-height: 80vh;
 
        section:first-of-type{
          
@@ -33,7 +33,7 @@
         .sidebyside {
             display: flex;
             background-color: inherit;
-            margin: 8rem 0rem;
+            padding: 6rem 0rem 7rem 0rem;
 
             p {
                 width: 50%;
